[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/InitMenuCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/InitMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_right = 320.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Type your name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 48.0
margin_right = 320.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Pick your character's appearance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -30.0
margin_right = 56.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 3 )
text = "Start playing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 0.424095
margin_top = 123.605
margin_right = 320.424
margin_bottom = 147.605
custom_fonts/font = SubResource( 1 )
text = "Can you already read the Thai alphabet?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="CheckBox" parent="."]
margin_left = 206.335
margin_top = 118.923
margin_right = 254.335
margin_bottom = 148.923
custom_fonts/font = SubResource( 2 )
pressed = true
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="CheckBox" parent="."]
margin_left = 257.424
margin_top = 118.605
margin_right = 309.424
margin_bottom = 148.605
custom_fonts/font = SubResource( 2 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_A" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 95.5697 )

[node name="Character_B" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 95.5697 )
index = "B"

[node name="Character_C" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 95.5697 )
index = "C"

[node name="Character_D" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 95.5697 )
index = "D"

[node name="Character_E" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, 96 )
index = "E"

[node name="TextEdit" type="TextEdit" parent="."]
anchor_top = 0.00117804
anchor_bottom = 0.00117804
margin_left = 39.0
margin_top = 19.0
margin_right = 282.06
margin_bottom = 49.0
rect_clip_content = true
custom_fonts/font = SubResource( 4 )
highlight_current_line = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
